# orbis-ethica

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agi_3.0_architecture.md  bib.md  burn_ledger.json  burn_ledger.json.bak  debug_auth.py  docker-compose.yml  genesis.json  memory_graph.json  memory_graph.json.bak  orbis_ethica.db  project_audit_report.md  requirements.txt  setup_secure_identity.py  simulation.py  test_burn_ledger.json  test_deadlock.py  test_deliberation.py  test_generative.py  test_pool.py  test_reputation.py  test_ulfr.py  vector_memory.json  verify_imports.py
backend/: .env.example  Dockerfile  __init__.py  main.py  pyproject.toml
backend/api/: app.py  auth_middleware.py  swarm_routes.py
backend/cli/: __init__.py  main.py
backend/core/: config.py  database.py  deliberation_engine.py  extended_ulfr.py  interfaces.py  ledger.py  llm_provider.py
backend/core/models/: __init__.py  decision.py  entity.py  proposal.py  sql_models.py  ulfr.py
backend/core/protocols/: __init__.py  consensus.py  deliberation.py
backend/entities/: __init__.py  arbiter.py  base.py  creator.py  guardian.py  healer.py  mediator.py  seeker.py
backend/governance/: __init__.py  assembly_manager.py
backend/governance/dao/: contract.py
backend/knowledge/: gateway.py  models.py
backend/memory/: graph.py  vector_store.py
backend/memory/graph/: manager.py
backend/p2p/: libp2p_service.py  models.py  node_manager.py  sync_manager.py
backend/security/: identity.py  reputation_manager.py
backend/swarm/: models.py  shard_manager.py
(+78 files in other folders)
